Fix bug where channel nav overlaps modals, and bug where user update will try to attach photo even if it is non-existant.

--- a/app/assets/stylesheets/channel/channel.scss
+++ b/app/assets/stylesheets/channel/channel.scss
@@ -14,7 +14,7 @@
     #channel-nav {
       height: 60px;
       width: 100%;
-      z-index: 2;
+      z-index: 1;
     }
 
     .chatroom-container {
